--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -69,10 +69,9 @@
     <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
         <a href="popular">Most Popular </a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="new">Newly listed products (component)</a></div>
-
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="new">Newly listed products </a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="recent">Your Recently Viewed (component)</a></div>
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="recent">Your Recently Viewed </a></div>
 
 
 
