--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -1,18 +1,30 @@
 <h2>Products</h2>
 <!--          Search bar-->
-<input id = "searchBar" placeholder="Type to Search" type="search" [ngModel] = "searchText" #change (search)="update(change.value)" value="sup">
+<input id = "searchBar" placeholder="Type to Search" type="search" [ngModel] = "searchText" #change (search)="update(change.value)" value="" >
+
+<br>
+<br>
+<div id="wrapper">
+  Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="sortCategories()">
+  <option value="">All</option>
+  <option value="phone">Phone</option>
+  <option value="umbrella">Umbrellas</option>
+  <option value="jacket">Jacket</option>
+</select>
+</div>
+<br>
 
 <div id="wrapper">
   <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
-        <option value="1">Sort By Name (A to Z)</option>
-        <option value="2">Sort By Name (Z to A)</option>
-        <option value="3">Sort By Price (Low to High)</option>
-        <option value="4">Sort By Price (High to Low)</option>
-    </select>
+    <option value="1">Sort By Name (A to Z)</option>
+    <option value="2">Sort By Name (Z to A)</option>
+    <option value="3">Sort By Price (Low to High)</option>
+    <option value="4">Sort By Price (High to Low)</option>
+  </select>
 </div>
 <br />
-<!--Passes each product in database to the filter pipe-->
-<div *ngFor="let product of products | filter : searchText">
+
+<div *ngFor="let product of products | filter : searchText : inCategory">
   <div id="wrapper">
     <div class="box">
       <h3>
