--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -44,6 +44,42 @@
             <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
             {{product.name}}
 
+
+<h2>Products</h2>
+<!--          Search bar-->
+<input id = "searchBar" placeholder="Type to Search" type="search" [ngModel] = "searchText" #change (search)="update(change.value)" value="" >
+
+<br>
+<br>
+<div id="wrapper">
+  Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="sortCategories()">
+  <option value="">All</option>
+  <option value="phone">Phone</option>
+  <option value="umbrella">Umbrellas</option>
+  <option value="jacket">Jacket</option>
+</select>
+</div>
+<br>
+
+<div id="wrapper">
+  <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
+    <option value="1">Sort By Name (A to Z)</option>
+    <option value="2">Sort By Name (Z to A)</option>
+    <option value="3">Sort By Price (Low to High)</option>
+    <option value="4">Sort By Price (High to Low)</option>
+  </select>
+</div>
+<br />
+
+<div *ngFor="let product of products | filter : searchText : inCategory">
+  <div id="wrapper">
+    <div class="box">
+      <h3>
+        <a [title]="product.name + ' details'" [routerLink]="['/products', product.productId]">
+          <br />
+          <img src="{{product.image}}">
+          <br />
+          {{product.name}}
         </a>
         </h3>
 
@@ -76,3 +112,5 @@
             </div>
         </div>
     </div>
+</div>
+</div>
