random duplicate line removed

--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
             </div>
-            <router-outlet></router-outlet>
+            <router-outlet></router-outlet>=
         </div>
     </div>
     <footer></footer>
