--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -1,4 +1,36 @@
 <div style="height:25px;background-color:white;"></div>
+<hr>
+<div class="row">
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+    <div class="column">
+        <matcard></matcard>
+    </div>
+</div>
+<hr>
+<!--
 <div style="height:175px;background-color:white;">
     <div>
 
@@ -21,7 +53,7 @@
 
 </div>
 
-<!-- div boxes for next 10 products on main page-->
+
 <div style="height:175px;background-color:white;">
 
 
@@ -40,6 +72,7 @@
     <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product10</div>
 
 </div>
+-->
 <!-- Buttons to navigate pages?-->
 <div style="height:35px;background-color:white;">
     <div style="float:left;">
