implemented matcard and grid layout of products

--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -1,34 +1,6 @@
 <div style="height:25px;background-color:white;"></div>
-<hr>
-<div class="row">
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-</div>
-<hr>
-<div class="row">
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-    <div class="column">
-        <matcard></matcard>
-    </div>
-</div>
+
+<app-product-page></app-product-page>
 <hr>
 <!--
 <div style="height:175px;background-color:white;">
