--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-    Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="sortCategories()">
+    Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue">
     <option value="">All</option>
     <option value="phone">Phone</option>
     <option value="umbrella">Umbrellas</option>
@@ -7,7 +7,6 @@
 </select>
 </div>
 <br>
-
 <div id="wrapper">
   <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
         <option value="1">Sort By Name (A to Z)</option>
@@ -18,7 +17,7 @@
 </div>
 <br />
 
-<div *ngFor="let product of products | filter : searchText : inCategory">
+<div *ngFor="let product of products | filter : searchText : inCategory | category : selectedCategoryButtonValue">
   <div id="wrapper">
     <div class="box">
       <h3>
