--- a/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<!-- <div id="wrapper">
     <div class="box">
         <div *ngFor="let prod of relatedProducts">
             <table *ngIf="prod.category == product.category && prod.name != product.name">
@@ -7,4 +7,4 @@
             </table>
         </div>
     </div>
-</div>
+</div> -->
