--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -1,6 +1,6 @@
 <div style="height:25px;background-color:white;"></div>
 
-<app-product-page></app-product-page>
+<!-- <app-product-page></app-product-page> -->
 <hr>
 <!--
 <div style="height:175px;background-color:white;">
@@ -84,4 +84,3 @@
 
 <br/>
 <hr/>
-
