--- a/Comp354Project/Project-UI/src/app/Components/checkout/checkout.html
+++ b/Comp354Project/Project-UI/src/app/Components/checkout/checkout.html
@@ -27,7 +27,7 @@
 
 <div class="bill-container">
     <div class="col-md-4 offset-md-2">
-        <button class="btn btn-success btn-lg pull-left" (click)="payBill()">Pay Bill</button>
+        <button class="btn btn-success btn-lg pull-left" (click)="payBill()">Checkout</button>
     </div>
     <div class="col-md-4">
         <span *ngIf="!cartProducts.length"><strong>$0</strong></span>
