--- a/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
@@ -1,26 +1,16 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<h1>Admin Page - Accounts</h1>
 <div class="card my-5">
-
-    <form class="form-inline">
-        <div class="form-group mx-sm-3 mb-2">
-            <label for="inputAccount">Search Account</label>
-            <input type="text" class="form-control" id="inputAccount" placeholder="ID, username, or email" ngModel="searchAccountKey" autocomplete="off" (keyup)="filterAccount()">
-            <button type="button" class="close" aria-label="Clear" *ngIf="searchAccountKey" (click)="onSearchClear()">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </form>
-
-    <button type="submit" class="btn btn-success">Create</button>
-
     <div class="card-body">
+        <button class="btn btn-light" (click)="createAccount()">New Account</button>
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
-                <th scope="col">Edit</th>
+                <th scope="col">Can Buy</th>
+                <th scope="col">Operations</th>
             </tr>
             </thead>
             <tbody>
@@ -28,9 +18,10 @@
                 <td>{{ account.id }}</td>
                 <td>{{ account.name }}</td>
                 <td><a href="mailto:{{ account.email }}">{{ account.email }}</a></td>
+                <td>{{account.canBuy}}</td>
                 <td>
-                    <a routerLink="" class="btn btn-info">Update</a>
-                    <a routerLink="" class="btn btn-danger">Delete</a>
+                    <button class="btn btn-primary" (click)="updateAccount(account)">Edit</button>
+                    <button class="btn btn-danger" (click)="deleteAccount(account)">Delete</button>
                 </td>
             </tr>
             </tbody>
