Added authenticated user object & input validator utilities

--- a/Comp354Project/Project-UI/src/app/Components/login/login.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- bootstrap css -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
 <div class="alert alert-danger" [hidden]="!error">
     Error. Please try logging in again.
 </div>
