--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 <div class="container">
     <header></header>
+    <app-product-categories></app-product-categories>
   <div class="row">
     <div class="col-md-12">
       <div class="card bg-dark my-5">
