--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -1,12 +1,12 @@
-
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 <div class="container">
     <header></header>
-
+<!--
   <div class="row">
     <div class="col-md-12">
       <div class="card bg-dark my-5">
         <div class="card-body">
-          <!--
+
           <h2 class="card-title text-center text-white py-3" >{{ title }}</h2>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item"><a routerLink="/users" class="btn btn-info"> List Users</a></li>
@@ -24,11 +24,11 @@
 
         <main></main>
 
-        </div>
-      </div>
+        <!--</div>
+      </div>-->
       <router-outlet></router-outlet>
 
-    </div>
-  </div>
+   <!-- </div>
+  </div>-->
     <footer></footer>
 </div>
