--- a/Comp354Project/Project-UI/src/styles.css
+++ b/Comp354Project/Project-UI/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+/* --- ADMIN PAGE --- */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+.hide{
+    display: none;
+}
+mat-footer-row mat-footer-cell{
+    justify-content: center;
+    font-style: italic;
+}
+
+.search-div{
+    margin: 10px;
+}
+.search-form-field{
+    width: 60%;
+    margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+}
+.search-form-field div.mat-form-field-underline {
+    display: none;
+}
+.search-form-field div.mat-form-field-infix{
+    border-top: 0px;
+}
+.search-form-field div.mat-form-field-wrapper{
+    padding-bottom: 0px;
+}
+.search-form-field div.mat-form-field-suffix button{
+    height: 32px;
+    width: 32px;
+}
