Changed account details to popup dialog

--- a/Comp354Project/Project-UI/src/app/Components/admin/account-details/account-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/admin/account-details/account-details.component.html
@@ -20,6 +20,6 @@
 
         <br>
         <br>
-        <button (click)="list()" class="btn btn-primary">Back to Employee List</button><br>
+        <button (click)="close()" class="btn btn-primary">Close</button><br>
     </div>
 </div>
