--- a/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
@@ -34,11 +34,11 @@
     <h2>Account List</h2>
 </div>
 <div class="search-div">
-    <button mat-raised-button>
+    <button mat-raised-button (click)="createAccount()">
         <mat-icon>add</mat-icon>Create
     </button>
     <mat-form-field class="search-form-field" floatLabel="never">
-        <input matInput type="text" [(ngModel)]="searchKey" placeholder="Search..." autocomplete="off">
+        <input matInput type="text" [(ngModel)]="searchKey" placeholder="Search..." autocomplete="off" (keyup)="applyFilter()">
         <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
             <mat-icon>close</mat-icon>
         </button>
@@ -62,9 +62,9 @@
         <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let account">
-                <button mat-icon-button><mat-icon>launch</mat-icon></button>
-                <button mat-icon-button><mat-icon>edit</mat-icon></button>
-                <button mat-icon-button color="warn"><mat-icon>delete_outline</mat-icon></button>
+                <button mat-icon-button (click)="accountDetails(account.id)"><mat-icon>launch</mat-icon></button>
+                <button mat-icon-button ><mat-icon>edit</mat-icon></button>
+                <button mat-icon-button color="warn" (click)="deleteAccount(account.id)"><mat-icon>delete_outline</mat-icon></button>
             </mat-cell>
         </ng-container>
 
