--- a/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/admin/account-list/account-list.component.html
@@ -63,7 +63,7 @@
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let account">
                 <button mat-icon-button (click)="accountDetails(account.id)"><mat-icon>launch</mat-icon></button>
-                <button mat-icon-button ><mat-icon>edit</mat-icon></button>
+                <button mat-icon-button (click)="updateAccount(account)"><mat-icon>edit</mat-icon></button>
                 <button mat-icon-button color="warn" (click)="deleteAccount(account.id)"><mat-icon>delete_outline</mat-icon></button>
             </mat-cell>
         </ng-container>
