--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -1,50 +1,16 @@
 <div style="height:25px;background-color:white;"></div>
-
+<div class="sidebar">
+    <ul *ngFor="let department of departments" style="list-style: none;">
+        <li><strong>{{ department.name }}</strong>
+            <ul *ngFor="let category of department.categories" style="list-style: none;">
+                <li  ><a [routerLink]="'/products'" (click) = "categorychange(category.name)">{{ category.name }}</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
 <app-product-page></app-product-page>
 <hr>
-<!--
-<div style="height:175px;background-color:white;">
-    <div>
 
-        <div style="height:135px;width:75px;float:left;"></div>
-        <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product1</div>
-        <div style="height:135px;width:75px;float:left;"></div>
-        <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product2</div>
-
-        <div style="height:135px;width:75px;float:left;"></div>
-        <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product3</div>
-
-        <div style="height:135px;width:75px;float:left;"></div>
-        <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product4</div>
-
-        <div style="height:135px;width:75px;float:left;"></div>
-        <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product5</div>
-
-    </div >
-
-
-</div>
-
-
-<div style="height:175px;background-color:white;">
-
-
-    <div style="height:135px;width:75px;float:left;"></div>
-    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product6</div>
-    <div style="height:135px;width:75px;float:left;"></div>
-    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product7</div>
-
-    <div style="height:135px;width:75px;float:left;"></div>
-    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product8</div>
-
-    <div style="height:135px;width:75px;float:left;"></div>
-    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product9</div>
-
-    <div style="height:135px;width:75px;float:left;"></div>
-    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product10</div>
-
-</div>
--->
 <!-- Buttons to navigate pages?-->
 <div style="height:35px;background-color:white;">
     <div style="float:left;">
@@ -63,7 +29,7 @@
 <br>
 <br>
 <hr/>
-
+<!--
 <div style="height:300px;background-color:white;">
 
     <div style="height:25px;width:2500px;float:left;"></div>
@@ -81,6 +47,6 @@
 
 
 </div>
-
+-->
 <br/>
 <hr/>
