--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -1,14 +1,12 @@
 <div id="wrapper">
-    Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="catChange()">
+    <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="catChange()">
     <option value="">All</option>
     <option *ngFor= "let name of categoryNames"
             [value]="name">{{name}}
     </option>
-</select>
-</div>
-<br>
-<div id="wrapper">
-  <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
+    </select>
+
+    <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
         <option value="">Sort</option>
         <option value="1">Sort By Name (A to Z)</option>
         <option value="2">Sort By Name (Z to A)</option>
@@ -17,7 +15,6 @@
     </select>
 </div>
 <br />
-
 <div class="grid-container">
 
 <div *ngFor="let product of products | filter : searchText : inCategory">
