several little changes

--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -17,7 +17,8 @@
 <br />
 <div class="grid-container">
 
-<div *ngFor="let product of products | filter : searchText : inCategory">
+<div *ngFor="let product of products | filter : searchText : inCategory let i=index">
+    <div *ngIf="i<a; else ">
         <mat-card class="product-card">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
@@ -31,5 +32,11 @@
             <img mat-card-image src="{{product.imageURL}}" >
         </mat-card>
       <p *ngIf="!product">No products to display</p>
+    </div>
+    <ng-template #loggedOut>
+        Please friend, login.
+    </ng-template>
 </div>
+    <button (click)="a = a+20">next</button>
+    <div>The Current Count is {{a}}</div>
 </div>
