Implemented front-end account activation & password recovery + remodeled authentication components to be modals

--- a/Comp354Project/Project-UI/src/app/Components/login/login.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/login/login.component.html
@@ -24,7 +24,7 @@
             </div>
             <button class="btn btn-success">Login</button>
         </form>
-        <p>Don't have an account? <a routerLink="/registration">Sign Up</a> </p>
-        <p>Forgot your password?</p>
+        <p>Don't have an account? <button type="button" class="btn btn-link" (click)="onRegister()">Sign Up</button> </p>
+        <button type="button" class="btn btn-link" (click)="onForget()">Forgot your password?</button>
     </div>
 </div>
