--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -18,7 +18,7 @@
 <div class="grid-container">
 
 <div *ngFor="let product of products | filter : searchText : inCategory let i=index">
-    <div *ngIf="i<a; else ">
+    <div *ngIf="i<a">
         <mat-card class="product-card">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
@@ -33,10 +33,8 @@
         </mat-card>
       <p *ngIf="!product">No products to display</p>
     </div>
-    <ng-template #loggedOut>
-        Please friend, login.
-    </ng-template>
 </div>
-    <button (click)="a = a+20">next</button>
-    <div>The Current Count is {{a}}</div>
 </div>
+<hr>
+<button id=button1 (click)="a = a-8">View Less</button>
+<button id=button2 (click)="a = a+8">View More</button>
