--- a/Comp354Project/Project-UI/src/app/Components/social-media-buttons/social-media-buttons.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/social-media-buttons/social-media-buttons.component.html
@@ -1,8 +1,8 @@
-
+<!--
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
 <body>
 
@@ -18,3 +18,24 @@
 </div>
 </div>
 </body>
+-->
+
+<div class="jumbotron">
+    <div class="row">
+        <div class="col">
+            <fb-like url={{url}}></fb-like>
+        </div>
+        <div class="col">
+            <google-plus url={{url}}></google-plus>
+        </div>
+        <div class="col">
+            <tweet url={{url}} text={{text}}></tweet>
+        </div>
+        <div class="col">
+            <linkedin-share url={{url}}></linkedin-share>
+        </div>
+        <div class="col">
+            <pin-it url={{url}} media={{imageUrl}} description={{text}}></pin-it>
+        </div>
+    </div>
+</div>
